<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>ru.itmo</groupId>
    <artifactId>marketplace</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>marketplace</name>

    <modules>
        <module>monolith</module>
        <module>config-server</module>
        <module>user-service</module>
        <module>gateway</module>
        <module>common</module>
        <module>user-service-client</module>
        <module>category-service</module>
        <module>security-module</module>
        <module>eureka-server</module>
        <module>reactive-security-module</module>
        <module>market-service</module>
        <module>deal-service</module>
        <module>review-service</module>
        <module>reactive-user-service-client</module>
        <module>market-service-reactive-client</module>
    </modules>

    <properties>
        <java.version>21</java.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <spring-boot.version>3.3.5</spring-boot.version>
        <spring-cloud.version>2023.0.3</spring-cloud.version>
        <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
        <org.liquibase.version>4.30.0</org.liquibase.version>
        <org.jacoco.version>0.8.12</org.jacoco.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct</artifactId>
                <version>1.6.2</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>3.0.0</version>
                    <configuration>
                        <argLine>@{argLine} --enable-preview</argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.0.0</version>
                    <configuration>
                        <argLine>@{argLine} --enable-preview</argLine>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring-boot.version}</version>
<!--                    <configuration>-->
<!--                        <layers>-->
<!--                            <enabled>true</enabled>-->
<!--                        </layers>-->
<!--                        <excludes>-->
<!--                            <exclude>-->
<!--                                <groupId>org.projectlombok</groupId>-->
<!--                                <artifactId>lombok</artifactId>-->
<!--                            </exclude>-->
<!--                        </excludes>-->
<!--                    </configuration>-->
                    <executions>
                        <execution>
                            <goals>
                                <goal>repackage</goal>
                                <goal>build-info</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>

                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>${org.jacoco.version}</version>
                    <configuration>
                        <excludes>
                            <exclude>**/*ru/itmo/marketplace/api/**</exclude>
                            <exclude>**/*ru/itmo/marketplace/model/**</exclude>
                            <exclude>**/*ru/itmo/marketplace/mapper/**</exclude>
                        </excludes>
                    </configuration>
                    <executions>
                        <execution>
                            <goals>
                                <goal>prepare-agent</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>report</id>
                            <phase>verify</phase>
                            <goals>
                                <goal>report</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>

            </plugins>
        </pluginManagement>
    </build>

</project>
